# SSI

./: CMakeLists.txt  README.md  main.cpp  py.txt  wykresy.txt
